Update locales Order by keys alphabetically Add missing keys to other locales

--- a/src/renderer/assets/locales/ar.json
+++ b/src/renderer/assets/locales/ar.json
@@ -1,45 +1,170 @@
 {
+  "$notify": {
+    "texts": {
+      "aniListRefreshRateUpdated": "تحديث الفاصل الزمني بنجاح إلى  {refreshRate} دقيقة!"
+    },
+    "titles": {
+      "success": "بنجاح!"
+    }
+  },
+  "$vuetify": {
+    "dataIterator": {
+      "nextPage": "الصفحة التالية",
+      "noResultsText": "لا يتوفر أي نتائج",
+      "pageText": "{0}-{1} من {2}",
+      "prevPage": "الصفحة السابقة",
+      "rowsPerPageAll": "كل السجلات",
+      "rowsPerPageText": "السجلات لكل صفحة"
+    },
+    "dataTable": {
+      "rowsPerPageText": "الأسطر لكل صفحة"
+    },
+    "noDataText": "لا يتوفر أي بيانات"
+  },
+  "aniList": {
+    "listStatus": {
+      "current": "جار المشاهدة",
+      "dropped": "ملغى",
+      "finished": "إنتهى",
+      "paused": "إيقاف مؤقت",
+      "planning": "مخطط له",
+      "repeating": "مشاهدة مرة أخرى"
+    },
+    "mediaInformation": {
+      "cancelled": "ملغى",
+      "currentlyAiring": "جار نشغيل العرض",
+      "finished": "إنتهى العرض",
+      "finishedAiring": "إنتهى العرض",
+      "notYetAired": "لم يعرض بعد",
+      "notYetReleased": "العرض المخطط له",
+      "releasing": "سيعرض"
+    }
+  },
+  "myAnimeList": {
+    "completed": "إنتهى",
+    "dropped": "ملغى",
+    "onHold": "إيقاف مؤقت",
+    "planned": "مخطط له",
+    "watching": "جار المشاهدة"
+  },
   "system": {
+    "actions": {
+      "add": "إضافة",
+      "cancel": "إلغاء",
+      "close": "إغلاق",
+      "delete": "مسح",
+      "edit": "تعديل",
+      "login": "تسجيل الدخول",
+      "logout": "تسجيل الخروج",
+      "refreshAniList": "تحديث قائمة الأنمي",
+      "refreshMAL": "التحديث",
+      "refreshTorrents": "تحديث التريندز",
+      "remove": "إزالة",
+      "reset": "إعادة تعيين",
+      "save": "حفظ",
+      "select": "Select",
+      "submitDelete": "تأكيد المسح!"
+    },
     "constants": {
-      "loading": "جار التحميل...",
-      "animeTitle": "عنوان الأنمي",
-      "progress": "التقدم",
-      "airingIn": "عرض الحلقة {episode} {time}",
       "airingFinished": "Airing finished",
+      "airingIn": "عرض الحلقة {episode} {time}",
+      "animeTitle": "عنوان الأنمي",
+      "autumn": "الخريف",
+      "errorResponseTitle": "لم يتم التحديث",
+      "fall": "الخريف",
+      "lastUpdated": "تم التحديث مأخرا",
+      "loadMore": "تحميل أكثر من عنصر",
+      "loading": "جار التحميل...",
+      "progress": "التقدم",
       "score": "التقيم",
       "season": "الموسم",
-      "lastUpdated": "تم التحديث مأخرا",
-      "winter": "الشتاء",
       "spring": "الربيع",
       "summer": "الصيف",
-      "autumn": "الخريف",
-      "fall": "الخريف",
+      "toFinished": "إنتهى",
       "unknown": "غير معروف",
       "updated": {
-        "title": "تم تحديث الانمي",
-        "text": "بنجاح {title} تم تحديث"
+        "text": "بنجاح {title} تم تحديث",
+        "title": "تم تحديث الانمي"
       },
-      "errorResponseTitle": "لم يتم التحديث",
-      "toFinished": "إنتهى",
-      "loadMore": "تحميل أكثر من عنصر"
+      "winter": "الشتاء"
     },
     "error": {
-      "titles": {
-        "notFound": "غير موجود",
-        "fatalError": "خطأ فادح"
-      },
       "messages": {
         "notFoundOrAdultContent": "إذا كان المحتوى لأكبر من 18 سنة, قم بتفعيل 'محتوى 18' عن طريق الذهاب الى الإعدادت ثم AniList.co !",
         "numberInsufficient": "هذا الرقم غير كافي!"
+      },
+      "titles": {
+        "fatalError": "خطأ فادح",
+        "notFound": "غير موجود"
       }
     },
+    "informationModal": {
+      "adultContent": "المحتوى مصنف للكبار فقط!",
+      "airingTime": "موعد العرض",
+      "anime": "أنمي",
+      "clear": "إزالة كل النجوم",
+      "created": {
+        "text": "تم التحميل بنجاح!",
+        "title": "تحميل!"
+      },
+      "dataInformation": "معلومات عن قائمتك",
+      "dateFormat": "يوم.شهر.سنة",
+      "deleteModalHeader": "هل تريد حقا أن تخدفها؟",
+      "deleted": {
+        "text": "تم الحذف بنجاح!",
+        "title": "حذف!"
+      },
+      "description": "الوصف",
+      "doYouReallyWantToDelete": "هل تريد حقا أن تحذف {title} من قائمتك؟",
+      "dropdownPlaceholder": "أختر من فضلك...",
+      "englishName": "اسم إنكليزي",
+      "episodes": "الحلقة",
+      "errorResponseTitle": "لم يتم التحديث!",
+      "inputRequired": "المدخلات المطلوبة!",
+      "japaneseName": "اسم ياباني",
+      "manga": "مانجا",
+      "noEnglishName": "لا يتوفر أي اسم إنكليزي",
+      "noJapaneseName": "لا يتوفر أي اسم ياباني",
+      "noSynonyms": "لا يوجد أي مرادفات",
+      "ownRating": "تقييمك الخاص",
+      "ownStatus": "حالتك الخاصة",
+      "rating": "التقيم",
+      "ratingError": "التقيم أقل أو أكثر من حدود التقييم!",
+      "seriesInformation": "معلونات عن الأنمي",
+      "seriesStatus": "حالة الأنمي",
+      "sinceDate": "منذ {date}",
+      "synonyms": "المرادفات",
+      "type": "نوع الإنمي",
+      "unknownDate": "التاريخ غير معروف",
+      "updated": {
+        "text": "تم التحديث بنجاح!",
+        "title": "تحديث!"
+      },
+      "watchedEpisodes": "الحلقة مشاهدة"
+    },
     "listStatus": {
-      "watching": "جار المشاهدة",
-      "repeating": "مشاهدة مرة أخرى",
       "completed": "إنتهى",
-      "onHold": "إيقاف مؤقت",
       "dropped": "ملغى",
-      "planned": "مخطط له"
+      "onHold": "إيقاف مؤقت",
+      "planned": "مخطط له",
+      "repeating": "مشاهدة مرة أخرى",
+      "watching": "جار المشاهدة"
+    },
+    "menu": {
+      "listStatus": {
+        "completed": "({amount}) إنتهى",
+        "dropped": "({amount}) ملغى",
+        "onHold": "({amount}) إيقاف مؤقت",
+        "planned": "({amount}) مخطط",
+        "repeating": "({amount}) مشاهدة مرة أخرى",
+        "watching": "({amount}) جار المشاهدة"
+      },
+      "search": {
+        "headline": "البحث",
+        "noResults": "لا يوجدأي نتائج",
+        "notInList": "لا يوجد في قائمتك",
+        "search": "جار البحث ..."
+      }
     },
     "modules": {
       "aniList": "قائمة الأنمي",
@@ -47,183 +172,58 @@
       "torrents": "التريندز"
     },
     "settings": {
-      "title": "الإعدادت",
-      "menu": {
-        "appSettings": "إعدادات التطبيق",
-        "myAnimeList": "مفضلاتي",
-        "aniList": "قائمة الأنمي",
-        "restoreFactoryData": "إرجاع الإعدادت الإفتراضية",
-        "aboutZeroTwo": "عن ZeroTwo",
-        "specialThanks": "شكر وتقدير خاص"
-      },
-      "appSettings": {
-        "setAppLanguage": "تغيير لغة التطبيق",
-        "chooseLanguage": "إختر اللفة",
-        "changeLanguage": "تغيير اللغة"
-      },
-      "myAnimeList": {
-        "loggedInAs": "تم تسجيل دخولك كـ",
-        "accountSettings": "إعدادات الحساب",
-        "loginData": "بيانات تسجيل الدخول",
-        "username": "اسم المستخدم",
-        "password": "كلمة السر",
-        "malRefreshRate": "الفاصل الزمني للتحديث (في الدقيقة)",
-        "noCredentials": "لا يوجد أي بيانات تسجيل!",
-        "enterCredentials": "يرجى إدخال البيانات لتسجيل الدخول",
-        "credentialsWrongOrTooManyLoginAttempts": "إما أن البيانات غير صحيحة أو أنك حاولت تسجيل الدخول مرارا وتكرارا!",
-        "credentialsCouldNotBeVerifiedOrTooManyLoginAttempts": "<p>بيانات المدخلة غير صحيحة وبالتالي لا يمكن التحقق منها!</p><p>يرجى التأكد من بياناتك, لانك قد حاولت تسجيل الدخول كثيرا</p><p>حاول أن تسجل الدخول مرة أخرى من فضلك بعد 1 إلى 6 ساعات من الآن...</p>"
+      "aboutZeroTwo": {
+        "link": "إضغط هنا",
+        "version": "الإصدار"
       },
       "aniList": {
-        "loggedInAs": "تم تسجيل دخولك كـ",
         "accountSettings": "إعدادات الحساب",
         "aniListRefreshRate": "الفاصل الزمني للتحديث",
+        "hintTableHeaders": "Choose the columns that should be displayed in the table.",
+        "loggedInAs": "تم تسجيل دخولك كـ",
         "minutes": "دقائق",
-        "hintTableHeaders": "Wähle die Spalten aus, die in der Tabelle angezeigt werden sollen.",
-        "tableHeadersLabel": "Zusätzliche Spalten in der Tabelle auswählen",
         "tableHeaders": {
-          "HEADER_TITLE": "Titel",
-          "HEADER_PROGRESS": "Fortschritt",
-          "HEADER_SCORE": "Bewertung",
-          "HEADER_SEASON": "Saison",
-          "HEADER_LASTUPDATED": "Zuletzt aktualisiert",
-          "HEADER_GENRE": "Genre"
+          "HEADER_GENRE": "Genre",
+          "HEADER_LASTUPDATED": "Last updated",
+          "HEADER_PROGRESS": "Progress",
+          "HEADER_SCORE": "Score",
+          "HEADER_SEASON": "Season",
+          "HEADER_TITLE": "Title"
         },
-        "tableHeadersError": "Es sind nur bis zu vier zusätzliche Spalten erlaubt!"
+        "tableHeadersError": "Only up to four extra columns are registerable!",
+        "tableHeadersLabel": "Add extra columns to the table"
+      },
+      "appSettings": {
+        "changeLanguage": "تغيير اللغة",
+        "chooseLanguage": "إختر اللفة",
+        "setAppLanguage": "تغيير لغة التطبيق"
+      },
+      "menu": {
+        "aboutZeroTwo": "عن ZeroTwo",
+        "aniList": "قائمة الأنمي",
+        "appSettings": "إعدادات التطبيق",
+        "myAnimeList": "مفضلاتي",
+        "restoreFactoryData": "إرجاع الإعدادت الإفتراضية",
+        "specialThanks": "شكر وتقدير خاص"
+      },
+      "myAnimeList": {
+        "accountSettings": "إعدادات الحساب",
+        "credentialsCouldNotBeVerifiedOrTooManyLoginAttempts": "<p>بيانات المدخلة غير صحيحة وبالتالي لا يمكن التحقق منها!</p><p>يرجى التأكد من بياناتك, لانك قد حاولت تسجيل الدخول كثيرا</p><p>حاول أن تسجل الدخول مرة أخرى من فضلك بعد 1 إلى 6 ساعات من الآن...</p>",
+        "credentialsWrongOrTooManyLoginAttempts": "إما أن البيانات غير صحيحة أو أنك حاولت تسجيل الدخول مرارا وتكرارا!",
+        "enterCredentials": "يرجى إدخال البيانات لتسجيل الدخول",
+        "loggedInAs": "تم تسجيل دخولك كـ",
+        "loginData": "بيانات تسجيل الدخول",
+        "malRefreshRate": "الفاصل الزمني للتحديث (في الدقيقة)",
+        "noCredentials": "لا يوجد أي بيانات تسجيل!",
+        "password": "كلمة السر",
+        "username": "اسم المستخدم"
       },
       "restoreFactoryData": {
-        "restore": "إرجاع الإعدادت الإفتراضية",
         "confirmRestoration": "نعم, أنا أريد إرجاع الإعدادت الإفتراضية!",
-        "pressWithinToRestore": "{seconds} ثانية حتى يرجع الزر إلى وضعه الطبيعي."
+        "pressWithinToRestore": "{seconds} ثانية حتى يرجع الزر إلى وضعه الطبيعي.",
+        "restore": "إرجاع الإعدادت الإفتراضية"
       },
-      "aboutZeroTwo": {
-        "version": "الإصدار",
-        "link": "إضغط هنا"
-      }
-    },
-    "menu": {
-      "search": {
-        "headline": "البحث",
-        "notInList": "لا يوجد في قائمتك",
-        "search": "جار البحث ...",
-        "noResults": "لا يوجدأي نتائج"
-      },
-      "listStatus": {
-        "watching": "({amount}) جار المشاهدة",
-        "repeating": "({amount}) مشاهدة مرة أخرى",
-        "completed": "({amount}) إنتهى",
-        "onHold": "({amount}) إيقاف مؤقت",
-        "dropped": "({amount}) ملغى",
-        "planned": "({amount}) مخطط"
-      }
-    },
-    "informationModal": {
-      "anime": "أنمي",
-      "manga": "مانجا",
-      "description": "الوصف",
-      "seriesInformation": "معلونات عن الأنمي",
-      "dataInformation": "معلومات عن قائمتك",
-      "episodes": "الحلقة",
-      "rating": "التقيم",
-      "type": "نوع الإنمي",
-      "synonyms": "المرادفات",
-      "noSynonyms": "لا يوجد أي مرادفات",
-      "airingTime": "موعد العرض",
-      "englishName": "اسم إنكليزي",
-      "noEnglishName": "لا يتوفر أي اسم إنكليزي",
-      "japaneseName": "اسم ياباني",
-      "noJapaneseName": "لا يتوفر أي اسم ياباني",
-      "seriesStatus": "حالة الأنمي",
-      "sinceDate": "منذ {date}",
-      "dateFormat": "يوم.شهر.سنة",
-      "unknownDate": "التاريخ غير معروف",
-      "ownRating": "تقييمك الخاص",
-      "ownStatus": "حالتك الخاصة",
-      "watchedEpisodes": "الحلقة مشاهدة",
-      "dropdownPlaceholder": "أختر من فضلك...",
-      "updated": {
-        "title": "تحديث!",
-        "text": "تم التحديث بنجاح!"
-      },
-      "created": {
-        "title": "تحميل!",
-        "text": "تم التحميل بنجاح!"
-      },
-      "deleted": {
-        "title": "حذف!",
-        "text": "تم الحذف بنجاح!"
-      },
-      "errorResponseTitle": "لم يتم التحديث!",
-      "deleteModalHeader": "هل تريد حقا أن تخدفها؟",
-      "doYouReallyWantToDelete": "هل تريد حقا أن تحذف {title} من قائمتك؟",
-      "clear": "إزالة كل النجوم",
-      "inputRequired": "المدخلات المطلوبة!",
-      "ratingError": "التقيم أقل أو أكثر من حدود التقييم!",
-      "adultContent": "المحتوى مصنف للكبار فقط!"
-    },
-    "actions": {
-      "refreshMAL": "التحديث",
-      "refreshAniList": "تحديث قائمة الأنمي",
-      "refreshTorrents": "تحديث التريندز",
-      "cancel": "إلغاء",
-      "edit": "تعديل",
-      "delete": "مسح",
-      "submitDelete": "تأكيد المسح!",
-      "close": "إغلاق",
-      "save": "حفظ",
-      "reset": "إعادة تعيين",
-      "add": "إضافة",
-      "remove": "إزالة",
-      "login": "تسجيل الدخول",
-      "logout": "تسجيل الخروج",
-      "select": "Select"
-    }
-  },
-  "myAnimeList": {
-    "watching": "جار المشاهدة",
-    "completed": "إنتهى",
-    "onHold": "إيقاف مؤقت",
-    "dropped": "ملغى",
-    "planned": "مخطط له"
-  },
-  "aniList": {
-    "mediaInformation": {
-      "finishedAiring": "إنتهى العرض",
-      "currentlyAiring": "جار نشغيل العرض",
-      "notYetAired": "لم يعرض بعد",
-      "releasing": "سيعرض",
-      "finished": "إنتهى العرض",
-      "notYetReleased": "العرض المخطط له",
-      "cancelled": "ملغى"
-    },
-    "listStatus": {
-      "current": "جار المشاهدة",
-      "repeating": "مشاهدة مرة أخرى",
-      "finished": "إنتهى",
-      "paused": "إيقاف مؤقت",
-      "dropped": "ملغى",
-      "planning": "مخطط له"
-    }
-  },
-  "$vuetify": {
-    "dataIterator": {
-      "prevPage": "الصفحة السابقة",
-      "nextPage": "الصفحة التالية",
-      "pageText": "{0}-{1} من {2}",
-      "noResultsText": "لا يتوفر أي نتائج",
-      "rowsPerPageText": "السجلات لكل صفحة",
-      "rowsPerPageAll": "كل السجلات"
-    },
-    "dataTable": {
-      "rowsPerPageText": "الأسطر لكل صفحة"
-    },
-    "noDataText": "لا يتوفر أي بيانات"
-  },
-  "$notify": {
-    "titles": {
-      "success": "بنجاح!"
-    },
-    "texts": {
-      "aniListRefreshRateUpdated": "تحديث الفاصل الزمني بنجاح إلى  {refreshRate} دقيقة!"
+      "title": "الإعدادت"
     }
   }
 }
